--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
   },
   "dependencies": {
     "axios": "^1.13.4",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "cookies-next": "^6.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.2",
     "framer-motion": "^12.32.0",
+    "helmet": "^6.0.0",
+    "jsonwebtoken": "^9.0.0",
     "lucide-react": "^0.563.0",
+    "mongoose": "^7.0.0",
+    "morgan": "^1.10.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
